# Trading-Analyzer

./: .gitignore  README.md  requirements.txt  vercel.json
api/: index.py
backend/: .gitignore  README.md  requirements.txt
backend/app/: __init__.py  main.py
backend/app/backtest/: README.md  __init__.py  broker.py  engine.py  orders.py  portfolio.py  results.py
backend/app/data/: cache.py  calendar.py  fetcher.py
backend/app/data/providers/: __init__.py  stooq.py  tiingo.py  twelvedata.py  yahoo.py
backend/app/metrics/: performance.py
backend/app/models/: custom_spec.py  schemas.py
backend/app/strategies/: __init__.py  buy_hold.py  evaluator.py  indicators.py  moving_average.py  rsi.py
backend/tests/: conftest.py  test_api.py  test_backtest.py  test_broker.py  test_custom_strategy.py  test_metrics.py  test_portfolio.py  test_strategies.py
backtest_engine/: .gitignore  README.md  pyproject.toml
backtest_engine/backtest_engine/: __init__.py  broker.py  engine.py  metrics.py  orders.py  portfolio.py  results.py
backtest_engine/examples/: moving_average_example.py
backtest_engine/tests/: conftest.py  test_engine.py  test_metrics.py
frontend/: README.md  app.js  index.html  package-lock.json  package.json  styles.css
